@@ -156,8 +156,8 @@ public class Gypsy extends Thief
 		CMLib.ableMapper().addCharAbilityMapping(ID(),2,"Thief_Runecasting",true);
 
 		//CMLib.ableMapper().addCharAbilityMapping(ID(),3,"Thief_Kidnapping",true);
-		//CMLib.ableMapper().addCharAbilityMapping(ID(),3,"Skill_ShardUse",true);
-		CMLib.ableMapper().addCharAbilityMapping(ID(),3,"Chant_KnowAnimal",false);
+		CMLib.ableMapper().addCharAbilityMapping(ID(),3,"Skill_ShardUse",true);
+		//CMLib.ableMapper().addCharAbilityMapping(ID(),3,"Chant_KnowAnimal",false);
 
 		CMLib.ableMapper().addCharAbilityMapping(ID(),4,"Thief_Sneak",true);
 		//CMLib.ableMapper().addCharAbilityMapping(ID(),4,"Chant_EnhancePotion",false);
