@@ -980,6 +980,8 @@ public class CMCatalog extends StdLibrary implements CatalogLibrary
 	@Override
 	public boolean activate()
 	{
+		if(!super.activate())
+			return false;
 		if(serviceClient==null)
 		{
 			name="THCatalog"+Thread.currentThread().getThreadGroup().getName().charAt(0);
