@@ -399,7 +399,7 @@ example a string such as: "To the east is the residence of
 ${STAT:ROOM:EAST:MOB:NAME}" would embed the name of a mob in a room to
 the east of the current room. This command may internally cause
 post-processing if necessary, and so is almost guaranteed to always
-work unlike some of the special ROOM_ tags.</li>
+work unlike some of the special ROOM_ tags.</li><li>$[FORMULA] to generate a number. &nbsp;For example, $[10 + 5?10]</li>
         <li>(a(n)) will remove any indefinite or definite
 articles from the string immediately following it and replace it (or
 insert) either "a" or "an" depending on the first letter of the word.</li>
