@@ -1,0 +1,41 @@
+<?xml version="1.0"?>
+<!-- ----------------------------------------------------------------------------
+Copyright 2024-2024 Bo Zimmerman
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+ http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+--------------------------------------------------------------------------------
+
+See guides/RandomAreas.html for information about documents of this type.
+-->
+<string id="RANDNUM">$[1?1000]</string>
+<string id="random_event" define="random_event" select="any-1">
+	<string id="good_money">
+		You will come into some money.
+		ONCE_PROG
+			MPECHOAT \$i You seem to have more money than you thought.  Weird.
+			mpmoney \$i $RANDNUM
+		~
+	</string>
+	<string id="bad_money">
+		You will lose some of your money.
+		ONCE_PROG
+			MPSETVAR \$i LOSTMONEY $RANDNUM
+		~
+		RAND_PROD 10
+			IF GOLDAMT(\$i &gt;= '$&lt;\$i LOSTMONEY&gt;')
+				MPECHOAT \$i You seem to have less money than you thought.  Weird.
+				mpmoney \$i -$&lt;\$i LOSTMONEY&gt;
+			ENDIF 
+		~
+	</string>
+</string>
